plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.88'
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
}

base {
    archivesName = mod_id
}

configurations {
    libraries
    // This way, you only need one dependency declaration for both runtime and compile dependencies
    implementation.extendsFrom libraries
}
configurations {
    runtimeClasspath.extendsFrom localRuntime
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }


    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()
            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()

            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')
            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG

            jvmArguments.addAll([
                    // 忽略无效指令，避免有的人没安装 JetBrain Runtime 无法启动游戏
                    "-XX:+IgnoreUnrecognizedVMOptions",
                    // 启用 JetBrain Runtime 热重载功能
                    "-XX:+AllowEnhancedClassRedefinition"
            ])

            if (isRunningInIdea()) {
                systemProperty "terminal.jline", "true"
            }
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }


repositories {

    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroup("software.bernie.geckolib")
        }
    }

    maven {
        url = "https://www.cursemaven.com"
    }
    maven {
        // location of the maven that hosts JEI files since January 2023
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }

}

boolean dev = true // 在本体中开发为true，单独开发为false

dependencies {
    if (dev) {
        implementation jarJar(project(":Confluence-Magic-Lib"))
        implementation("software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}")
    } else {
        implementation files("libs/confluence_magic_lib-1.0.0.jar")
        jarJar("org.confluence.lib:confluence_magic_lib:1.0.0") { }
        implementation(jarJar("software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"))
    }

    compileOnly "curse.maven:jade-324717:6011258"
    runtimeOnly "curse.maven:jade-324717:6011258"

    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    // 数学库
    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
    jarJar(group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1')
    additionalRuntimeClasspath "org.apache.commons:commons-math3:3.6.1"

    // 女仆
    compileOnly "curse.maven:touhou-little-maid-355044:6302619"
    //runtimeOnly "curse.maven:touhou-little-maid-355044:6302619"

    // jer
    runtimeOnly "curse.maven:just-enough-resources-jer-240630:6174588"

    // 暮色森林
    runtimeOnly "curse.maven:the-twilight-forest-227639:6087105"
    compileOnly "curse.maven:the-twilight-forest-227639:6087105"

    // iris

    compileOnly "curse.maven:irisshaders-455508:6213632"
//    runtimeOnly "curse.maven:irisshaders-455508:6213632"
//
//    // sodium
    compileOnly "curse.maven:sodium-394468:6382651"
//    runtimeOnly "curse.maven:sodium-394468:6382651"

    compileOnly "net.fabricmc.fabric-api:fabric-renderer-api-v1:6.0.2+75fa737a29"


}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
// When "copyIdeResources" is enabled, this will also run before the game launches in IDE environments.
// See https://docs.gradle.org/current/dsl/org.gradle.language.jvm.tasks.ProcessResources.html
tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Copy).configureEach { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }


tasks.register("genVoilaRun") {
    dependsOn("prepareClientRun")
    inputs.files(sourceSets.main.output)
    inputs.files(configurations.runtimeClasspath)
    def runtimeClasspath = files({
        sourceSets.main.output + configurations.runtimeClasspath
    })
    def projectDir = project.projectDir
    def runConfigDir = new File(project.rootDir, ".idea/runConfigurations")
    def programParam = new File(projectDir, "build/moddev/clientRunProgramArgs.txt").toString().replace("\\", "\\\\")
    def workingDir = new File(projectDir, "run")
    def vmArgs = new File(projectDir, "build/moddev/clientRunVmArgs.txt").toString().replace("\\", "\\\\")
    def moduleName = "${project.rootProject.name}.${project.name}.${sourceSets.main.name}" // 写死了自身必定在第二层
    def classesDir = new File(projectDir, "build/classes/java/main").toString().replace("\\", "\\\\")
    def resDir = new File(projectDir, "build/resources/main").toString().replace("\\", "\\\\")
    def modId = mod_id
    def ideaRt = "D:\\Program Files\\JetBrains\\IntelliJ IDEA 2024.2.3\\lib\\idea_rt.jar"
//    return;

    def runConfig = """
            <component name="ProjectRunConfigurationManager">
                <configuration default="false" name="Confluence" type="SpringBootApplicationConfigurationType" factoryName="Spring Boot" nameIsGenerated="false">
                    <option name="MAIN_CLASS_NAME" value="net.neoforged.devlaunch.Main" />
                    <option name="SPRING_BOOT_MAIN_CLASS" value="net.neoforged.devlaunch.Main" />
                    <module name="${moduleName}" />
                    <option name="VM_PARAMETERS" value="@${vmArgs} -Dfml.modFolders=${modId}%%${classesDir};${modId}%%${resDir} -cp &quot;${runtimeClasspath.asPath};${ideaRt}&quot;" />
                    <option name="PROGRAM_PARAMETERS" value="@${programParam}" />
                    <option name="WORKING_DIRECTORY" value="${workingDir}" />
                    <method v="2">
                        <option name="Make" enabled="true" />
                    </method>
                </configuration>
            </component>"""
    if (!runConfigDir.exists()) {
        runConfigDir.mkdirs()
    }
    new File(runConfigDir, "GeneratedRunConfig.xml").text = runConfig
}

def isRunningInIdea() {
    return System.getProperty("idea.active") == "true"
}
